Fix gap

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -816,6 +816,7 @@ ul.main {
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 20px;
+	font-size: 13px;
 }
 
 .speaker-content__summary-text {
@@ -865,7 +866,7 @@ ul.main {
 }
 
 .team__about h2 {
-	font-size: 20px;
+	font-size: 18px;
 	margin-bottom: 10px;
 	font-weight: bold;
 	line-height: 4;
@@ -887,7 +888,7 @@ ul.main {
 	content: '';
 	background-image: url('../images/member_all_trimming.png');
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 	background-position: center;
 	width: 100%;
 	height: 100%;
@@ -1580,6 +1581,7 @@ img#cool_teenager {
 
 	.team__poster-wrapper:before {
 		height: 300px;
+		background-size: contain;
 	}
 
 	.team__about {
